force-app/main/default/objects/Universities__c/Universities__c.object-meta.xml
<CustomObject>
    <label>Universities</label>
    <nameField>
        <label>University Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>