force-app/main/default/objects/Universities__c/fields/AlumniEmploymentRank__c.field-meta.xml
<CustomField>
    <fullName>AlumniEmploymentRank__c</fullName>
    <inlineHelpText>If the Alumni Employment Rank is known for the University, enter the same here.</inlineHelpText>
    <label>Alumni Employment Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>