force-app/main/default/objects/Universities__c/fields/EducationRecords__c.field-meta.xml
<CustomField>
    <fullName>EducationRecords__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Records</label>
    <referenceTo>Education__c</referenceTo>
    <relationshipLabel>Universities</relationshipLabel>
    <relationshipName>Universities</relationshipName>
    <type>Lookup</type>
</CustomField>