force-app/main/default/objects/Universities__c/fields/NationalRank__c.field-meta.xml
<CustomField>
    <fullName>NationalRank__c</fullName>
    <inlineHelpText>If the National Rank of the University is known, enter the same.</inlineHelpText>
    <label>National Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>