force-app/main/default/objects/Universities__c/fields/QualityofEducationRank__c.field-meta.xml
<CustomField>
    <fullName>QualityofEducationRank__c</fullName>
    <inlineHelpText>If the &apos;Quality of Education Rank&apos; is known, enter the same here.</inlineHelpText>
    <label>Quality of Education Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>