force-app/main/default/objects/Universities__c/fields/QualityofFacultyRank__c.field-meta.xml
<CustomField>
    <fullName>QualityofFacultyRank__c</fullName>
    <inlineHelpText>If the Quality of Faculty Rank for the University is known, enter the same here.</inlineHelpText>
    <label>Quality of Faculty Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>