force-app/main/default/objects/Universities__c/fields/ResearchPerformanceRank__c.field-meta.xml
<CustomField>
    <fullName>ResearchPerformanceRank__c</fullName>
    <inlineHelpText>If the Research Performance Rank for the University is known, enter the same here.</inlineHelpText>
    <label>Research Performance Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>