force-app/main/default/objects/Universities__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <inlineHelpText>How much did the Contact score in this qualification. Enter as %age</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>