force-app/main/default/objects/Universities__c/fields/WorldRank__c.field-meta.xml
<CustomField>
    <fullName>WorldRank__c</fullName>
    <label>World Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>