force-app/main/default/objects/Universities__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorldRank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>